welcome.lessons.welcome.loopwhile.LoopWhile.scala.error
Program:1: error: ambiguous reference to overloaded definition,
both method backward in class Program of type (i: Int)Unit
and  method backward in class SimpleBuggle of type ()Unit
match expected type ?
while(!isFacingWall()) backward 
                       ^